test: validate input and output hitmaps and wcov

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -227,6 +227,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "input_EE_wcov = hp.read_map(base_folder + \"/00000000/\" + \\\n",
+    "    f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_wcov.fits\"\n",
+    ", (3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hitmap, wcov = load_hitmap_wcov(config, site, channel, realization=0)"
    ]
   },
@@ -248,7 +266,7 @@
    "outputs": [],
    "source": [
     "sampling_rate = input_map.sum() \n",
-    "sampling_rate /= 10 * 24 * 3600 * simulations_observing_efficiency[site.lower()][telescope]\n",
+    "sampling_rate /= 10 * 24 * 3600 * 0.3931149305555555\n",
     "sampling_rate /= 8438 # HF detectors per tube\n",
     "sampling_rate *= 8 # focal plane thinning factor"
    ]
@@ -259,7 +277,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulations_observing_efficiency[site.lower()][telescope]"
+    "sampling_rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check we are within 5% of 20 Hz (used in sims for SAT, LAT used 200 Hz)"
    ]
   },
   {
@@ -268,7 +293,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_rate"
+    "np.testing.assert_allclose(sampling_rate, 20, rtol=5/100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import astropy.units as u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_variance = input_EE_wcov * u.K**2 * (input_map  / (20 * u.Hz))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_variance = input_variance[input_map > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_NET = np.sqrt(np.median(input_variance))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_NET.to(u.uK * u.s**(.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_NET.to(u.uK * u.s**(.5)) / np.sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.tests.helper import assert_quantity_allclose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel_NET = 747*u.uK * u.s**(.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The channel NET is valid for temperature, when we solve for the $2$ polarization components we get a factor of $\\sqrt{2}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert_quantity_allclose(input_NET, channel_NET*np.sqrt(2), rtol=5/100) "
    ]
   },
   {
@@ -290,6 +403,15 @@
    "outputs": [],
    "source": [
     "sampling_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_allclose(sampling_rate, 100, rtol=5/100)"
    ]
   },
   {
@@ -347,6 +469,60 @@
    "source": [
     "for i,label in [(3, \"EE\"), (4, \"EB\"), (5, \"BB\")]:\n",
     "    hp.mollview(wcov[i], unit=\"$K^2_{CMB}$\", min=0, max=1e-11, title=f\"{label} White noise covariance\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wcov[wcov == hp.UNSEEN] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variance = wcov[3] * u.K**2 * (hitmap / (100 * u.Hz)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variance[variance != 0].min(), variance.max(), variance[variance != 0].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_mission_NET = np.sqrt(np.median(variance[hitmap != 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_mission_NET.to(u.uK * u.s**(.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert_quantity_allclose(full_mission_NET, channel_NET*np.sqrt(2), rtol=5/100) "
    ]
   },
   {
