docs: remove link to web interface

--- a/index.ipynb
+++ b/index.ipynb
@@ -20,9 +20,7 @@
     "\n",
     "    pip install s4_design_sim_tool\n",
     "\n",
-    "the web interface is temporarily available at: \n",
-    "\n",
-    "* <http://132-249-238-90.compute.cloud.sdsc.edu/>\n",
+    "the web interface is currently unavailable.\n",
     "\n",
     "## Configuration options\n",
     "\n",
