docs: docstring of load_hitmap_wcov

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -77,7 +77,13 @@
     "\n",
     "\n",
     "def load_hitmap_wcov(config, site, channel, realization=0):\n",
-    "    \"\"\"Load hitmaps and white noise covariance for a channel\n",
+    "    \"\"\"Load hitmaps and white noise covariance matrices for a channel\n",
+    "    \n",
+    "    This loads the simulated hitmaps and white noise covariance matrices\n",
+    "    and scales them properly to the experiment configuration and duration\n",
+    "    as defined in the input config file.\n",
+    "    Hitmaps assumes a sampling frequency of 100 Hz for SAT and 400 Hz for\n",
+    "    LAT.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -93,8 +99,11 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    output_map : numpy array\n",
-    "        Output map with all emissions combined, uses nan for missing pixels\n",
+    "    hitmap : numpy array\n",
+    "        Hitmap for all channels all tubes combined\n",
+    "    wcov : numpy array\n",
+    "        White noise covariance matrix, rows are:\n",
+    "        TT TE TB EE EB BB, units are K^2*s\n",
     "    \"\"\"\n",
     "\n",
     "    # it is the same scaling for hitmap and white noise covariance matrix,\n",
