fix: covariance units

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -103,7 +103,7 @@
     "        Hitmap for all channels all tubes combined\n",
     "    wcov : numpy array\n",
     "        White noise covariance matrix, rows are:\n",
-    "        TT TE TB EE EB BB, units are K^2*s\n",
+    "        TT TE TB EE EB BB, units are K^2\n",
     "    \"\"\"\n",
     "\n",
     "    # it is the same scaling for hitmap and white noise covariance matrix,\n",
