feat: removed the write_outputs flag

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -124,7 +124,7 @@
     "        self.output_folder = Path(output_folder)\n",
     "        self.output_folder.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "    def run(self, channels=\"all\", sites=[\"Pole\", \"Chile\"], write_outputs=True):\n",
+    "    def run(self, channels=\"all\", sites=[\"Pole\", \"Chile\"]):\n",
     "        \"\"\"Run the simulation\n",
     "\n",
     "        Parameters\n",
@@ -136,8 +136,6 @@
     "            * \"all\" (default)\n",
     "        site : list[str]\n",
     "            ['Pole'] or ['Chile'], by default [\"Pole\", \"Chile\"]\n",
-    "        write_outputs : bool\n",
-    "            if True write the outputs to disk, if False return them (not implemented yet)\n",
     "        \"\"\"\n",
     "        nsplits = self.config[\"experiment\"].get(\"number_of_splits\", 0)\n",
     "        if nsplits == 1:\n",
@@ -193,31 +191,28 @@
     "                    output_map += sky_emission\n",
     "                    # Use UNSEEN instead of nan for missing pixels\n",
     "                    output_map[np.isnan(output_map)] = hp.UNSEEN\n",
-    "                    if write_outputs:\n",
     "\n",
-    "                        log.info(f\"Writing {output_filename}\")\n",
-    "                        hp.write_map(\n",
-    "                            subfolder / output_filename,\n",
-    "                            output_map,\n",
-    "                            column_units=\"K_CMB\",\n",
-    "                            extra_header=[\n",
-    "                                (\"SOFTWARE\", \"s4_design_sim_tool\"),\n",
-    "                                (\"SW_VERS\", __version__),\n",
-    "                                (\"SKY_VERS\", \"1.0\"),\n",
-    "                                (\"ATM_VERS\", \"1.0\"),\n",
-    "                                (\"NOI_VERS\", \"1.0\"),\n",
-    "                                (\"SITE\", site),\n",
-    "                                (\"SPLIT\", split),\n",
-    "                                (\"NSPLITS\", nsplits),\n",
-    "                                (\"CHANNEL\", channel),\n",
-    "                                (\"DATE\", str(date.today())),\n",
-    "                                (\"CONFMD5\", md5sum_file(self.config_filename)),\n",
-    "                            ],\n",
-    "                            coord=\"Q\",\n",
-    "                            overwrite=True,\n",
-    "                        )\n",
-    "                    else:\n",
-    "                        raise NotImplementedError(\"Only writing FITS output for now\")"
+    "                    log.info(f\"Writing {output_filename}\")\n",
+    "                    hp.write_map(\n",
+    "                        subfolder / output_filename,\n",
+    "                        output_map,\n",
+    "                        column_units=\"K_CMB\",\n",
+    "                        extra_header=[\n",
+    "                            (\"SOFTWARE\", \"s4_design_sim_tool\"),\n",
+    "                            (\"SW_VERS\", __version__),\n",
+    "                            (\"SKY_VERS\", \"1.0\"),\n",
+    "                            (\"ATM_VERS\", \"1.0\"),\n",
+    "                            (\"NOI_VERS\", \"1.0\"),\n",
+    "                            (\"SITE\", site),\n",
+    "                            (\"SPLIT\", split),\n",
+    "                            (\"NSPLITS\", nsplits),\n",
+    "                            (\"CHANNEL\", channel),\n",
+    "                            (\"DATE\", str(date.today())),\n",
+    "                            (\"CONFMD5\", md5sum_file(self.config_filename)),\n",
+    "                        ],\n",
+    "                        coord=\"Q\",\n",
+    "                        overwrite=True,\n",
+    "                    )"
    ]
   },
   {
