feat: load, process and write hitmaps and wcov in client

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -56,7 +56,8 @@
     "\n",
     "from s4_design_sim_tool.foregrounds import load_sky_emission\n",
     "from s4_design_sim_tool.atmosphere import load_atmosphere, get_telecope_years\n",
-    "from s4_design_sim_tool.noise import load_noise"
+    "from s4_design_sim_tool.noise import load_noise\n",
+    "from s4_design_sim_tool.hitmap_wcov import load_hitmap_wcov"
    ]
   },
   {
@@ -183,6 +184,7 @@
     "                        output_map += load_noise(\n",
     "                            self.config, site, channel, realization=split\n",
     "                        )\n",
+    "\n",
     "                    else:\n",
     "                        log.info(\"Skip the instrument noise\")\n",
     "\n",
@@ -193,6 +195,7 @@
     "                    output_map[np.isnan(output_map)] = hp.UNSEEN\n",
     "\n",
     "                    log.info(f\"Writing {output_filename}\")\n",
+    "                    noise_version = \"1.0\"\n",
     "                    hp.write_map(\n",
     "                        subfolder / output_filename,\n",
     "                        output_map,\n",
@@ -202,7 +205,7 @@
     "                            (\"SW_VERS\", __version__),\n",
     "                            (\"SKY_VERS\", \"1.0\"),\n",
     "                            (\"ATM_VERS\", \"1.0\"),\n",
-    "                            (\"NOI_VERS\", \"1.0\"),\n",
+    "                            (\"NOI_VERS\", noise_version),\n",
     "                            (\"SITE\", site),\n",
     "                            (\"SPLIT\", split),\n",
     "                            (\"NSPLITS\", nsplits),\n",
@@ -212,7 +215,54 @@
     "                        ],\n",
     "                        coord=\"Q\",\n",
     "                        overwrite=True,\n",
-    "                    )"
+    "                    )\n",
+    "                    # only run of full mission and the first split\n",
+    "                    if split in [0, 1] and realization == 0:\n",
+    "\n",
+    "                        if split == 0:\n",
+    "                            log.info(f\"Writing {output_filename}\")\n",
+    "                            hitmap, wcov = load_hitmap_wcov(\n",
+    "                                self.config, site, channel, realization=0\n",
+    "                            )\n",
+    "                        hp.write_map(\n",
+    "                            subfolder / output_filename.replace(\"KCMB\", \"hitmap\"),\n",
+    "                            hitmap,\n",
+    "                            column_units=\"hits\",\n",
+    "                            extra_header=[\n",
+    "                                (\"SOFTWARE\", \"s4_design_sim_tool\"),\n",
+    "                                (\"SW_VERS\", __version__),\n",
+    "                                (\"NOI_VERS\", noise_version),\n",
+    "                                (\"SITE\", site),\n",
+    "                                (\"SPLIT\", split),\n",
+    "                                (\"NSPLITS\", nsplits),\n",
+    "                                (\"CHANNEL\", channel),\n",
+    "                                (\"DATE\", str(date.today())),\n",
+    "                                (\"CONFMD5\", md5sum_file(self.config_filename)),\n",
+    "                            ],\n",
+    "                            coord=\"Q\",\n",
+    "                            overwrite=True,\n",
+    "                        )\n",
+    "                        hitmap = np.round(hitmap / nsplits).astype(np.int64)\n",
+    "\n",
+    "                        hp.write_map(\n",
+    "                            subfolder / output_filename.replace(\"KCMB\", \"wcov\"),\n",
+    "                            wcov,\n",
+    "                            column_units=\"K_CMB**2\",\n",
+    "                            extra_header=[\n",
+    "                                (\"SOFTWARE\", \"s4_design_sim_tool\"),\n",
+    "                                (\"SW_VERS\", __version__),\n",
+    "                                (\"NOI_VERS\", noise_version),\n",
+    "                                (\"SITE\", site),\n",
+    "                                (\"SPLIT\", split),\n",
+    "                                (\"NSPLITS\", nsplits),\n",
+    "                                (\"CHANNEL\", channel),\n",
+    "                                (\"DATE\", str(date.today())),\n",
+    "                                (\"CONFMD5\", md5sum_file(self.config_filename)),\n",
+    "                            ],\n",
+    "                            coord=\"Q\",\n",
+    "                            overwrite=True,\n",
+    "                        )\n",
+    "                        wcov = hp.ma(wcov) * nsplits"
    ]
   },
   {
