fix: wcov labels

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "def load_hitmap_wcov(config, site, channel, realization=0):\n",
     "    \"\"\"Load hitmaps and white noise covariance matrices for a channel\n",
-    "    \n",
+    "\n",
     "    This loads the simulated hitmaps and white noise covariance matrices\n",
     "    and scales them properly to the experiment configuration and duration\n",
     "    as defined in the input config file.\n",
@@ -103,7 +103,7 @@
     "        Hitmap for all channels all tubes combined\n",
     "    wcov : numpy array\n",
     "        White noise covariance matrix, rows are:\n",
-    "        TT TE TB EE EB BB, units are K^2\n",
+    "        \"II\", \"IQ\", \"IU\", \"QQ\", \"QU\", \"UU\", units are K^2\n",
     "    \"\"\"\n",
     "\n",
     "    # it is the same scaling for hitmap and white noise covariance matrix,\n",
