free up memory after split 1

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -217,10 +217,12 @@
     "                        overwrite=True,\n",
     "                    )\n",
     "                    # only run of full mission and the first split\n",
-    "                    if split in [0, 1] and realization == 0:\n",
+    "                    if split in [0, 1]:\n",
     "\n",
     "                        if split == 0:\n",
-    "                            log.info(f\"Writing {output_filename}\")\n",
+    "                            log.info(\n",
+    "                                f\"Loading hitmap and white noise covariance matrix\"\n",
+    "                            )\n",
     "                            hitmap, wcov = load_hitmap_wcov(\n",
     "                                self.config, site, channel, realization=0\n",
     "                            )\n",
@@ -262,7 +264,9 @@
     "                            coord=\"Q\",\n",
     "                            overwrite=True,\n",
     "                        )\n",
-    "                        wcov = hp.ma(wcov) * nsplits"
+    "                        wcov = hp.ma(wcov) * nsplits\n",
+    "                        if split == 1:\n",
+    "                            del hitmap, wcov"
    ]
   },
   {
