--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -226,8 +226,10 @@
     "                            hitmap, wcov = load_hitmap_wcov(\n",
     "                                self.config, site, channel, realization=0\n",
     "                            )\n",
+    "                        hitmap_filename = output_filename.replace(\"KCMB\", \"hitmap\")\n",
+    "                        log.info(f\"Writing {hitmap_filename}\")\n",
     "                        hp.write_map(\n",
-    "                            subfolder / output_filename.replace(\"KCMB\", \"hitmap\"),\n",
+    "                            subfolder / hitmap_filename,\n",
     "                            hitmap,\n",
     "                            column_units=\"hits\",\n",
     "                            extra_header=[\n",
@@ -246,8 +248,10 @@
     "                        )\n",
     "                        hitmap = np.round(hitmap / nsplits).astype(np.int64)\n",
     "\n",
+    "                        wcov_filename = output_filename.replace(\"KCMB\", \"wcov\")\n",
+    "                        log.info(f\"Writing {wcov_filename}\")\n",
     "                        hp.write_map(\n",
-    "                            subfolder / output_filename.replace(\"KCMB\", \"wcov\"),\n",
+    "                            subfolder / wcov_filename,\n",
     "                            wcov,\n",
     "                            column_units=\"K_CMB**2\",\n",
     "                            extra_header=[\n",
