feat: run hitmap wcov only with noise

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -217,7 +217,7 @@
     "                        overwrite=True,\n",
     "                    )\n",
     "                    # only run of full mission and the first split\n",
-    "                    if split in [0, 1]:\n",
+    "                    if split in [0, 1] and self.config[\"experiment\"].get(\"include_noise\", False):\n",
     "\n",
     "                        if split == 0:\n",
     "                            log.info(\n",
