--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -194,6 +194,9 @@
     "        / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
     "    )\n",
     "    atmosphere_map /= np.sqrt(get_telecope_years(config, site, channel))\n",
+    "    \n",
+    "    atmosphere_map[0] *= config[\"experiment\"].get(\"atmosphere_scaling_T\", 1)\n",
+    "    atmosphere_map[1:] *= config[\"experiment\"].get(\"atmosphere_scaling_P\", 1)\n",
     "\n",
     "    return atmosphere_map"
    ]
@@ -339,6 +342,73 @@
    "outputs": [],
    "source": [
     "hp.mollview(output_map[2], min=-1e-9, max=1e-9, unit=\"K\", title=\"Atmosphere U\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test scaling\n",
+    "\n",
+    "We want to be able to freely scale the atmosphere noise differently for Temperature and for Polarization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config[\"experiment\"][\"atmosphere_scaling_T\"] = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config[\"experiment\"][\"atmosphere_scaling_P\"] = 0.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_map = load_atmosphere(config, site, channel, realization=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_map[np.isnan(output_map)] = hp.UNSEEN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_T\"] * input_map[0][input_map[0] != hp.UNSEEN] * \\\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / (7 * 365.25 * .2) / 2),\n",
+    "    output_map[0][output_map[0] != hp.UNSEEN], rtol=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_allclose(config[\"experiment\"][\"atmosphere_scaling_P\"] * input_map[1:][input_map[1:] != hp.UNSEEN] * \\\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / (7 * 365.25 * .2) / 2),\n",
+    "    output_map[1:][output_map[1:] != hp.UNSEEN], rtol=1e-6)"
    ]
   },
   {
