renamed core notebook

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,9 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# s4_design_sim_tool\n",
+    "# Core utilities\n",
     "\n",
-    "> API details."
+    "> Utility functions and input folder"
    ]
   },
   {
@@ -128,9 +128,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "condajupynersc",
    "language": "python",
-   "name": "python3"
+   "name": "condajupynersc"
   }
  },
  "nbformat": 4,
