--- a/06_ui.ipynb
+++ b/06_ui.ipynb
@@ -25,6 +25,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# default_exp ui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display"
    ]
