--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -91,6 +91,7 @@
     "\n",
     "import collections\n",
     "\n",
+    "\n",
     "def merge_dict(d1, d2):\n",
     "    \"\"\"\n",
     "    Modifies d1 in-place to contain values from d2.  If any value\n",
@@ -157,9 +158,13 @@
     "        output_folder : str or Path\n",
     "            Output path\n",
     "        \"\"\"\n",
-    "        self.config_filename = [config_filename] if isinstance(config_filename, (str, Path)) else config_filename\n",
+    "        self.config_filename = (\n",
+    "            [config_filename]\n",
+    "            if isinstance(config_filename, (str, Path))\n",
+    "            else config_filename\n",
+    "        )\n",
     "\n",
-    "        self.config = toml.load(self.config_filename[0])                                                             \n",
+    "        self.config = toml.load(self.config_filename[0])\n",
     "        for conf in self.config_filename[1:]:\n",
     "            merge_dict(self.config, toml.load(conf))\n",
     "        self.output_filename_template = \"cmbs4_KCMB_{telescope}-{band}_{site}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
@@ -259,7 +264,9 @@
     "                        overwrite=True,\n",
     "                    )\n",
     "                    # only run of full mission and the first split\n",
-    "                    if split in [0, 1] and self.config[\"experiment\"].get(\"include_noise\", False):\n",
+    "                    if split in [0, 1] and self.config[\"experiment\"].get(\n",
+    "                        \"include_noise\", False\n",
+    "                    ):\n",
     "\n",
     "                        if split == 0:\n",
     "                            log.info(\n",
