Unit test for multiple TOML
See #19

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -494,11 +494,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test multiple TOML files "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%file only_CMB_scalar.toml\n",
+    "[sky_emission]\n",
+    "foreground_emission = 0\n",
+    "CMB_unlensed = 1\n",
+    "CMB_lensing_signal = 1\n",
+    "CMB_tensor_to_scalar_ratio = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim2 = S4RefSimTool([\"s4_reference_design.toml\", \"only_CMB_scalar.toml\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert sim2.config[\"sky_emission\"][\"foreground_emission\"] == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert sim2.config[\"sky_emission\"][\"CMB_tensor_to_scalar_ratio\"] == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert sim.config[\"telescopes\"] == sim2.config[\"telescopes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm only_CMB_scalar.toml"
+   ]
   }
  ],
  "metadata": {
