fix: if include noise is missing, it defaults to True

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -265,7 +265,7 @@
     "                    )\n",
     "                    # only run of full mission and the first split\n",
     "                    if split in [0, 1] and self.config[\"experiment\"].get(\n",
-    "                        \"include_noise\", False\n",
+    "                        \"include_noise\", True\n",
     "                    ):\n",
     "\n",
     "                        if split == 0:\n",
