fix: md5 for hitmaps support multiple configurations

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -312,7 +312,7 @@
     "                                (\"NSPLITS\", nsplits),\n",
     "                                (\"CHANNEL\", channel),\n",
     "                                (\"DATE\", str(date.today())),\n",
-    "                                (\"CONFMD5\", md5sum_file(self.config_filename)),\n",
+    "                                (\"CONFMD5\", conf_md5),\n",
     "                            ],\n",
     "                            coord=\"Q\",\n",
     "                            overwrite=True,\n",
