Parse multiple TOML in separate function
See #19

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -103,7 +103,28 @@
     "        if isinstance(v1, collections.Mapping) and isinstance(v2, collections.Mapping):\n",
     "            merge_dict(v1, v2)\n",
     "        else:\n",
-    "            d1[k] = v2"
+    "            d1[k] = v2\n",
+    "\n",
+    "\n",
+    "def parse_config(*config_files):\n",
+    "    \"\"\"Parse TOML configuration files\n",
+    "\n",
+    "    Later TOML configuration files override the previous ones,\n",
+    "    dictionaries at the same level are merged.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    config_files : one or more str\n",
+    "        paths to TOML configuration files\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    config : dict\n",
+    "        parsed dictionary\"\"\"\n",
+    "    config = toml.load(config_files[0])\n",
+    "    for conf in config_files[1:]:\n",
+    "        merge_dict(config, toml.load(conf))\n",
+    "    return config"
    ]
   },
   {
@@ -164,9 +185,7 @@
     "            else config_filename\n",
     "        )\n",
     "\n",
-    "        self.config = toml.load(self.config_filename[0])\n",
-    "        for conf in self.config_filename[1:]:\n",
-    "            merge_dict(self.config, toml.load(conf))\n",
+    "        self.config = parse_config(*self.config_filename)\n",
     "        self.output_filename_template = \"cmbs4_KCMB_{telescope}-{band}_{site}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
     "        self.output_folder = Path(output_folder)\n",
     "        self.output_folder.mkdir(parents=True, exist_ok=True)\n",
@@ -268,9 +287,7 @@
     "                        \"include_noise\", True\n",
     "                    ):\n",
     "\n",
-    "                        log.info(\n",
-    "                            f\"Loading hitmap and white noise covariance matrix\"\n",
-    "                        )\n",
+    "                        log.info(f\"Loading hitmap and white noise covariance matrix\")\n",
     "                        hitmap, wcov = load_hitmap_wcov(\n",
     "                            self.config, site, channel, realization=0\n",
     "                        )\n",
