fix: hitmap and wcov normalization
for full load hitmap as is,
on first split normalize by nsplits

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -288,12 +288,16 @@
     "                    ):\n",
     "\n",
     "                        log.info(f\"Loading hitmap and white noise covariance matrix\")\n",
-    "                        hitmap, wcov = load_hitmap_wcov(\n",
-    "                            self.config, site, channel, realization=0\n",
-    "                        )\n",
+    "                        if split == 0:\n",
+    "                            hitmap, wcov = load_hitmap_wcov(\n",
+    "                                self.config, site, channel, realization=0\n",
+    "                            )\n",
+    "                        else:\n",
+    "                            hitmap = np.round(hitmap / nsplits).astype(np.int64)\n",
+    "                            wcov = hp.ma(wcov) * nsplits\n",
+    "\n",
     "                        hitmap_filename = output_filename.replace(\"KCMB\", \"hitmap\")\n",
     "                        log.info(f\"Writing {hitmap_filename}\")\n",
-    "                        hitmap = np.round(hitmap / nsplits).astype(np.int64)\n",
     "                        hp.write_map(\n",
     "                            subfolder / hitmap_filename,\n",
     "                            hitmap,\n",
@@ -315,7 +319,6 @@
     "\n",
     "                        wcov_filename = output_filename.replace(\"KCMB\", \"wcov\")\n",
     "                        log.info(f\"Writing {wcov_filename}\")\n",
-    "                        wcov = hp.ma(wcov) * nsplits\n",
     "\n",
     "                        hp.write_map(\n",
     "                            subfolder / wcov_filename,\n",
