implementation of observation frequency as a function of band
closes #18

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -79,7 +79,107 @@
     "    telescope : str\n",
     "        'SAT' or 'LAT'\n",
     "    \"\"\"\n",
-    "    return channel[-2] + \"AT\""
+    "    return channel[-2] + \"AT\"\n",
+    "\n",
+    "\n",
+    "def get_band(channel):\n",
+    "    \"\"\"Identify the frequency band of a channel\n",
+    "\n",
+    "    Currently it is just removing the last character\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    channel : str\n",
+    "        channel tag, e.g. MFH1\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    band : str\n",
+    "        'MFH'\n",
+    "    \"\"\"\n",
+    "    return channel[:-1]\n",
+    "\n",
+    "\n",
+    "def get_observing_efficiency(observing_efficiency_config, site, telescope, band):\n",
+    "    \"\"\"Extract the observing frequency for a specific channel from\n",
+    "    the configuration dictionary\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    observing_efficiency_config : dict\n",
+    "        the order of keys should be site, telescope, band\n",
+    "        e.g. {\"Pole\":{\"LAT\":{\"HFL\":0.1}}, \"default\":0.2}\n",
+    "    site : str\n",
+    "        site, Pole or Chile\n",
+    "    telescope : str\n",
+    "        LAT or SAT\n",
+    "    band: str\n",
+    "        e.g. HFL\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    observing_efficiency : float\n",
+    "        observing efficiency in decimal form, for example .2 for 20%\n",
+    "        \"\"\"\n",
+    "    if site in observing_efficiency_config:\n",
+    "        if telescope in observing_efficiency_config[site]:\n",
+    "            try:\n",
+    "                return observing_efficiency_config[site][telescope][band]\n",
+    "            except KeyError:\n",
+    "                try:\n",
+    "                    return observing_efficiency_config[site][telescope][\"default\"]\n",
+    "                except KeyError:\n",
+    "                    pass\n",
+    "        try:\n",
+    "            return observing_efficiency_config[site][\"default\"]\n",
+    "        except KeyError:\n",
+    "            pass\n",
+    "    return observing_efficiency_config[\"default\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observing_efficiency_config =  {\"Pole\":{\"LAT\":{\"HFL\":0.1}}, \"default\":0.2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert get_observing_efficiency(observing_efficiency_config, \"Pole\", \"LAT\", \"HFL\") == .1\n",
+    "assert get_observing_efficiency(observing_efficiency_config, \"Pole\", \"LAT\", \"MFL\") == .2\n",
+    "assert get_observing_efficiency(observing_efficiency_config, \"Chile\", \"LAT\", \"MFL\") == .2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observing_efficiency_config_telescope_default =  {\"Pole\":{\"LAT\":{\"HFL\":0.1, \"default\":.15}}, \"default\":0.2}\n",
+    "\n",
+    "assert get_observing_efficiency(observing_efficiency_config_telescope_default, \"Pole\", \"LAT\", \"HFL\") == .1\n",
+    "assert get_observing_efficiency(observing_efficiency_config_telescope_default, \"Pole\", \"LAT\", \"MFL\") == .15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observing_efficiency_config_site_default =  {\"Pole\":{\"default\":.19, \"LAT\":{\"HFL\":0.1, \"default\":.15}}, \"default\":0.2}\n",
+    "\n",
+    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"LAT\", \"HFL\") == .1\n",
+    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"LAT\", \"MFL\") == .15\n",
+    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"SAT\", \"LFS\") == .19"
    ]
   },
   {
