--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -35,7 +35,13 @@
     "from pathlib import Path\n",
     "import logging as log\n",
     "\n",
-    "from s4_design_sim_tool.core import get_telescope, base_folder, simulations_observing_efficiency"
+    "from s4_design_sim_tool.core import (\n",
+    "    get_telescope,\n",
+    "    get_band,\n",
+    "    get_observing_efficiency,\n",
+    "    base_folder,\n",
+    "    simulations_observing_efficiency,\n",
+    ")"
    ]
   },
   {
@@ -178,6 +184,7 @@
     "    \"\"\"\n",
     "\n",
     "    telescope = get_telescope(channel)\n",
+    "    band = get_band(channel)\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
     "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
@@ -191,7 +198,12 @@
     "    atmosphere_map *= np.sqrt(\n",
     "        10\n",
     "        * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
-    "        / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
+    "        / (\n",
+    "            365.25\n",
+    "            * get_observing_efficiency(\n",
+    "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, band\n",
+    "            )\n",
+    "        )\n",
     "    )\n",
     "    atmosphere_map /= np.sqrt(get_telecope_years(config, site, channel))\n",
     "\n",
