--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -44,7 +44,13 @@
     "from pathlib import Path\n",
     "import logging as log\n",
     "\n",
-    "from s4_design_sim_tool.core import get_telescope, base_folder, simulations_observing_efficiency"
+    "from s4_design_sim_tool.core import (\n",
+    "    get_telescope,\n",
+    "    get_band,\n",
+    "    get_observing_efficiency,\n",
+    "    base_folder,\n",
+    "    simulations_observing_efficiency,\n",
+    ")"
    ]
   },
   {
@@ -237,6 +243,7 @@
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
     "    telescope = get_telescope(channel)\n",
+    "    band = get_band(channel)\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
     "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
@@ -251,7 +258,12 @@
     "    output_map *= np.sqrt(\n",
     "        10\n",
     "        * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
-    "        / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
+    "        / (\n",
+    "            365.25\n",
+    "            * get_observing_efficiency(\n",
+    "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, band\n",
+    "            )\n",
+    "        )\n",
     "    )\n",
     "    output_map /= np.sqrt(get_tube_years(config, site, channel))\n",
     "    # focal plane thinning factor of TOD simulations\n",
