--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -42,7 +42,13 @@
     "from pathlib import Path\n",
     "import logging as log\n",
     "\n",
-    "from s4_design_sim_tool.core import get_telescope, base_folder, simulations_observing_efficiency\n",
+    "from s4_design_sim_tool.core import (\n",
+    "    get_telescope,\n",
+    "    get_band,\n",
+    "    get_observing_efficiency,\n",
+    "    base_folder,\n",
+    "    simulations_observing_efficiency,\n",
+    ")\n",
     "from s4_design_sim_tool.noise import get_thinfp, get_tube_years"
    ]
   },
@@ -110,10 +116,14 @@
     "    # which is the same as noise except squared\n",
     "\n",
     "    telescope = get_telescope(channel)\n",
+    "    band = get_band(channel)\n",
     "\n",
-    "    scaling = (365.25 * config[\"experiment\"][\"observing_efficiency\"]) / (\n",
-    "        10 * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
-    "    )\n",
+    "    scaling = (\n",
+    "        365.25\n",
+    "        * get_observing_efficiency(\n",
+    "            config[\"experiment\"][\"observing_efficiency\"], site, telescope, band\n",
+    "        )\n",
+    "    ) / (10 * simulations_observing_efficiency[site.lower()].get(telescope, 1))\n",
     "    scaling *= get_tube_years(config, site, channel)\n",
     "    # focal plane thinning factor of TOD simulations\n",
     "    scaling *= get_thinfp(channel)\n",
@@ -399,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_rate = hitmap.sum() / (config[\"experiment\"][\"total_experiment_length_years\"] * config[\"experiment\"][\"observing_efficiency\"])\n",
+    "sampling_rate = hitmap.sum() / (config[\"experiment\"][\"total_experiment_length_years\"] * config[\"experiment\"][\"observing_efficiency\"][\"default\"])\n",
     "sampling_rate /= 365.25 * 24 * 3600\n",
     "sampling_rate /= 8438 # HF detectors per tube\n",
     "sampling_rate /= num_tubes"
