fix: need to weight by square root and input r will be 1

--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -109,7 +109,9 @@
     "        )\n",
     "        emission_map[emission_map == hp.UNSEEN] = np.nan\n",
     "        if emission == \"CMB_tensor_to_scalar_ratio\":\n",
-    "            weight /= 0.01  # r of the input maps\n",
+    "            # input maps are simulated with r=1\n",
+    "            # tensor-to-scalar ratio is defined in the power spectrum, we need to weight the maps with the square root\n",
+    "            weight = np.sqrt(weight)\n",
     "        output_map += emission_map * weight\n",
     "\n",
     "    output_map /= 1e6  # uK -> K\n",
