parse_channels function moved to cli

--- a/05_cli.ipynb
+++ b/05_cli.ipynb
@@ -50,7 +50,7 @@
     "import logging as log\n",
     "from datetime import date\n",
     "\n",
-    "from s4_design_sim_tool.core import get_telescope, parse_channels\n",
+    "from s4_design_sim_tool.core import get_telescope\n",
     "\n",
     "from s4_design_sim_tool import __version__\n",
     "\n",
@@ -79,6 +79,44 @@
     "    \"\"\"Compute md5 checksum of the contents of a file\"\"\"\n",
     "\n",
     "    return md5sum_string(open(filename, \"r\").read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "s4_channels = {\n",
+    "    \"SAT\": [\"HFS1\", \"HFS2\", \"LFS1\", \"LFS2\", \"MFHS1\", \"MFHS2\", \"MFLS1\", \"MFLS2\"],\n",
+    "    \"LAT\": [\"HFL1\", \"HFL2\", \"LFL1\", \"LFL2\", \"MFL1\", \"MFL2\", \"ULFL1\"],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def parse_channels(channels):\n",
+    "    \"\"\"Parse a comma separated list of channels or all or SAT/LAT into channel tag list\"\"\"\n",
+    "    if channels in [\"SAT\", \"LAT\"]:\n",
+    "        channels = s4_channels[channels]\n",
+    "    elif channels in [\"all\", None]:\n",
+    "        channels = s4_channels[\"SAT\"] + s4_channels[\"LAT\"]\n",
+    "    elif isinstance(channels, str):\n",
+    "        channels = channels.split(\",\")\n",
+    "    return channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert parse_channels(\"LFL1\") == [\"LFL1\"]\n",
+    "assert parse_channels([\"LFL1\"]) == [\"LFL1\"]\n",
+    "assert parse_channels(\"LFL1,LFL2\") == [\"LFL1\", \"LFL2\"]\n",
+    "assert parse_channels(\"LAT\") == ['HFL1', 'HFL2', 'LFL1', 'LFL2', 'MFL1', 'MFL2', 'ULFL1']\n",
+    "assert len(parse_channels(\"all\")) == 15"
    ]
   },
   {
