input maps using 0 for UNSEEN

--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -107,7 +107,7 @@
     "            dtype=None,\n",
     "            verbose=False,\n",
     "        )\n",
-    "        emission_map[emission_map == hp.UNSEEN] = np.nan\n",
+    "        emission_map[emission_map == 0] = np.nan\n",
     "        if emission == \"CMB_tensor_to_scalar_ratio\":\n",
     "            # input maps are simulated with r=3e-3\n",
     "            # tensor-to-scalar ratio is defined in the power spectrum, we need to weight the maps with the square root\n",
